--- a/index.master
+++ b/index.master
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    
+    <link href="css/docs.min.css" rel="stylesheet" />
     <title>DigitalCreek Light Blog</title>
 </head>
 <body>
