--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -8,8 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/docs.min.css" rel="stylesheet" />
-    <title>DigitalCreek Light Blog</title>
+    <link href="../css/docs.css" rel="stylesheet" />
+
+    <!-- 部分继承页的css
+    <link href="css/admin_modify_info.css" rel="stylesheet" />
+     -->
+    <title>DigitalCreek 控制中心</title>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -64,9 +68,9 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><asp:Label ID="lbl_username" runat="server" Text="USERNAME"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">消息中心 <span class="badge">99+</span></a></li>
-                                    <li><a href="#">资料修改</a></li>
+                                    <li><asp:LinkButton ID="LinkButton1" runat="server" onclick="btn_modifyAdminInfo_Click" CausesValidation="False">资料修改</asp:LinkButton></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><asp:LinkButton ID="btn_logoff" runat="server" onclick="btn_logoff_Click">注销</asp:LinkButton></li>
+                                    <li><asp:LinkButton ID="btn_logoff" runat="server" onclick="btn_logoff_Click" CausesValidation="False">注销</asp:LinkButton></li>
                                 </ul>
                             </li>
                         </ul>
