--- a/index.master
+++ b/index.master
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/docs.min.css" rel="stylesheet" />
+    <link href="css/docs.css" rel="stylesheet" />
     <title>DigitalCreek Light Blog</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理 <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="dc_admin/login.aspx">登录</a></li>
+                                    <li><a href="dc_admin/admin_login.aspx">登录</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#">分享</a></li>
                                 </ul>
