--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -37,6 +37,7 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><a href="Default.aspx">仪表盘</a></li>
+                            
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -62,6 +63,9 @@
                                     <li><a href="#">评论审核 <span class="badge">1</span></a></li>
                                 </ul>
                             </li>
+                            
+                            <li><a href="debug.aspx">debug</a></li>
+                            
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
@@ -76,6 +80,8 @@
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
+
+                    
 
                 </div>
             </nav>
