--- a/css/dc_index.css
+++ b/css/dc_index.css
@@ -1,61 +1,44 @@
 
-
-body {
-      
-    /*animation: body_background_change 60s infinite; */
-    background-color:#efefef;
-    font-family: "微软雅黑 Light","Microsoft YaHei",微软雅黑,"MicrosoftJhengHei",华文细黑,STHeiti,MingLiu;
-}
-
-.container {
-    margin-top: 50px;
-    overflow-y:scroll;
-    height:1000px;
-}
-
-.footer {
-    padding: 10px;
-    margin-top: 50px;
-    background-color: #525252;
+.jumbotron {
+    background-image: url(../res/homepage_background.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
     color: white;
-    text-align: center;
-    line-height: 20px;
-    box-shadow: 0px -1px 1px rgba(0, 0, 0, 0.5);
-}
-@keyframes body_background_change
-{
-    0% {
-        background:#333;
-    }
-    10% {
-        background: #607D8B;
-    }
-    20% {
-        background: #03A9F4;
-    }
-    30% {
-        background: #795548;
-    }
-    40% {
-        background: #3F51B5;
-    }
-    50% {
-        background: #673AB7;
-    }
-    60% {
-        background: #9C27B0;
-    }
-    70% {
-        background: #FF9800;
-    }
-    80% {
-        background: #FFEB3B;
-    }
-    90% {
-        background: #4CAF50;
-    }
-    100% {
-        background: #333;
-    }
+    text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
 }
 
+    .jumbotron h1 {
+        font-family: MingLiu;
+        color: #286090;
+        text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
+    }
+
+.data_pager {
+    display:inline-block;
+
+    height:30px;
+    width:30px;
+    padding:4px;
+    margin:20px auto 20px auto;
+}
+
+
+.data_pager:hover {
+    cursor:pointer;
+    background-color:aliceblue;
+}
+
+.data_pager:first-child {
+
+
+
+}
+
+    .data_pager:last-child {
+
+    }
+
+.main_article{
+    font-size:20px;
+}
