--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -10,9 +10,7 @@
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/docs.css" rel="stylesheet" />
 
-    <!-- 部分继承页的css
-    <link href="css/admin_modify_info.css" rel="stylesheet" />
-     -->
+    
     <title>DigitalCreek 控制中心</title>
 </head>
 <body>
@@ -37,16 +35,16 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><a href="Default.aspx">仪表盘</a></li>
-                            
+
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">撰写文章</a></li>
-                                    <li><a href="#">文章管理</a></li>
-<!--                                    <li><a href="#">标签分类</a></li>-->
+                                    <li><a href="article_list.aspx">文章管理</a></li>
+                                    <!--                                    <li><a href="#">标签分类</a></li>-->
                                 </ul>
                             </li>
-<!--
+                            <!--
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">组件<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -58,44 +56,47 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理<span class="badge">1</span><span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-<!--                                    <li><a href="#">用户管理</a></li>-->
+                                    <!--                                    <li><a href="#">用户管理</a></li>-->
                                     <li><a href="#">评论管理</a></li>
                                     <li><a href="#">评论审核 <span class="badge">1</span></a></li>
                                 </ul>
                             </li>
-                            
+
                             <li><a href="debug.aspx">debug</a></li>
-                            
+
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><asp:Label ID="lbl_username" runat="server" Text="USERNAME"></asp:Label>&nbsp;<span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <asp:Label ID="lbl_username" runat="server" Text="USERNAME"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">消息中心 <span class="badge">99+</span></a></li>
-                                    <li><asp:LinkButton ID="LinkButton1" runat="server" onclick="btn_modifyAdminInfo_Click" CausesValidation="False">资料修改</asp:LinkButton></li>
+                                    <li>
+                                        <asp:LinkButton ID="LinkButton1" runat="server" OnClick="btn_modifyAdminInfo_Click" CausesValidation="False">资料修改</asp:LinkButton></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><asp:LinkButton ID="btn_logoff" runat="server" onclick="btn_logoff_Click" CausesValidation="False">注销</asp:LinkButton></li>
+                                    <li>
+                                        <asp:LinkButton ID="btn_logoff" runat="server" OnClick="btn_logoff_Click" CausesValidation="False">注销</asp:LinkButton></li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
 
-                    
+
 
                 </div>
             </nav>
             <!-- 容器 -->
             <div class="container">
-                <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-                    
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
-                
+
             </div>
 
-</div>
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../bootstrap/js/bootstrap.min.js"></script>
+        </div>
+        <script src="../js/jquery-3.1.1.min.js"></script>
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
+        <script src="../js/expand_dropdown_auto.js"></script>
     </form>
 </body>
 </html>
