--- a/index.master
+++ b/index.master
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/docs.css" rel="stylesheet" />
+    <!-- 自定义css -->
+    <link href="css/dc_index.css" rel="stylesheet" />
+
     <title>DigitalCreek Light Blog</title>
 </head>
 <body>
@@ -35,6 +38,7 @@
                             <li><a href="./">首页</a></li>
                             <li><a href="About.aspx">关于</a></li>
                         </ul>
+
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理 <span class="caret"></span></a>
@@ -45,6 +49,7 @@
                                 </ul>
                             </li>
                         </ul>
+
                     </div>
                     <!-- /.navbar-collapse -->
 
@@ -60,5 +65,6 @@
     </form>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/expand_dropdown_auto.js"></script>
 </body>
 </html>
