--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -37,11 +37,11 @@
                             <li><a href="Default.aspx">仪表盘</a></li>
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
+                                <a href="article_addmod.aspx" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="article_addmod.aspx">撰写文章</a></li>
+                                    <li><a href="article_addmod.aspx">写文章</a></li>
                                     <li><a href="article_list.aspx">文章管理</a></li>
-                                    <li><a href="article_tag_mgr.aspx">文章标签管理</a></li>
+                                    <li><a href="article_tag_list.aspx">文章标签管理</a></li>
                                 </ul>
                             </li>
                             <!--
