--- a/index.master
+++ b/index.master
@@ -41,9 +41,12 @@
 
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理 <span class="caret"></span></a>
+                                <a href="dc_admin/admin_login.aspx" class="dropdown-toggle" data-toggle="dropdown" 
+                                    role="button" aria-haspopup="true" aria-expanded="false">
+                                    <asp:Label ID="lbl_username" runat="server" Text="管理"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="dc_admin/admin_login.aspx">登录</a></li>
+                                    <li><a href="dc_admin/admin_login.aspx">
+                                        <asp:Label ID="lbl_mgr" runat="server" Text="登录"></asp:Label></a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#">分享</a></li>
                                 </ul>
