--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -11,7 +11,7 @@
     <link href="../css/docs.css" rel="stylesheet" />
 
     
-    <title>DigitalCreek 控制中心</title>
+    <title>控制中心</title>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -28,16 +28,16 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a class="navbar-brand" href="../Default.aspx"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>DigitalCreek</a>
+                        <a class="navbar-brand" href="../Default.aspx"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>MyBlog</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="Default.aspx">仪表盘</a></li>
+                            <li><a href="Default.aspx">控制中心</a></li>
 
                             <li class="dropdown">
-                                <a href="article_addmod.aspx" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="article_addmod.aspx">写文章</a></li>
                                     <li><a href="article_list.aspx">文章管理</a></li>
@@ -52,30 +52,30 @@
                                     <li><a href="#">添加/删除模块</a></li>
                                 </ul>
                             </li>
--->
+
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理<span class="badge">1</span><span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <!--                                    <li><a href="#">用户管理</a></li>-->
+                                    <li><a href="#">用户管理</a></li>
                                     <li><a href="#">评论管理</a></li>
                                     <li><a href="#">评论审核 <span class="badge">1</span></a></li>
                                 </ul>
                             </li>
 
                             <li><a href="debug.aspx">debug</a></li>
-
+                        -->
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                     <asp:Label ID="lbl_username" runat="server" Text="USERNAME"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">消息中心 <span class="badge">99+</span></a></li>
+                                    
                                     <li>
                                         <asp:LinkButton ID="LinkButton1" runat="server" OnClick="btn_modifyAdminInfo_Click" CausesValidation="False">资料修改</asp:LinkButton></li>
                                     <li role="separator" class="divider"></li>
                                     <li>
-                                        <asp:LinkButton ID="btn_logoff" runat="server" OnClick="btn_logoff_Click" CausesValidation="False">注销</asp:LinkButton></li>
+                                        <asp:LinkButton ID="btn_logoff" runat="server" OnClick="btn_logoff_Click" CausesValidation="False"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;注销</asp:LinkButton></li>
                                 </ul>
                             </li>
                         </ul>
