--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -11,6 +11,8 @@
     <link href="../css/docs.css" rel="stylesheet" />
     <link href="../css/animate.css" rel="stylesheet" />
     <link href="../css/hover.css" rel="stylesheet" />
+    <link href="../wangEditor/css/wangEditor.min.css" rel="stylesheet" />
+    <script src="../js/jquery-3.1.1.min.js"></script>
     <title>控制中心</title>
 </head>
 <body>
@@ -94,7 +96,8 @@
             </div>
 
         </div>
-        <script src="../js/jquery-3.1.1.min.js"></script>
+        
+        
         <script src="../bootstrap/js/bootstrap.min.js"></script>
         <script src="../js/expand_dropdown_auto.js"></script>
     </form>
