--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -12,6 +12,7 @@
     <link href="../css/animate.css" rel="stylesheet" />
     <link href="../css/hover.css" rel="stylesheet" />
     <link href="../wangEditor/css/wangEditor.min.css" rel="stylesheet" />
+    <link href="css/admin.css" rel="stylesheet" />
     <script src="../js/jquery-3.1.1.min.js"></script>
     <title>控制中心</title>
 </head>
