--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -31,7 +31,8 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a class="navbar-brand" href="../Default.aspx"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><%=LoadSettings.LoadValue("site_title")%></a>
+                        <a class="navbar-brand" href="../Default.aspx"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                            <%=LoadSettings.LoadValue("site_title")%></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,7 +73,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
                                     aria-haspopup="true" aria-expanded="false" style="padding: 9px;">
-                                    <img src="../res/head.png" class="img-circle" height="32" width="32"/>
+                                    <asp:Image ID="img_headimg" runat="server" class="img-circle" style="border-radius: 50px !important;" height="32" width="32"/>
                                     <asp:Label ID="lbl_username" runat="server" Text="USERNAME"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     
