--- a/index.master
+++ b/index.master
@@ -48,7 +48,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
                                     role="button" aria-haspopup="true" aria-expanded="false"  style="padding: 9px;">
-                                    <img src="../res/head.png" class="img-circle" height="32" width="32"/>
+                                    <asp:Image ID="img_headimg" runat="server" class="img-circle" style="border-radius: 50px !important;" height="32" width="32"/>
                                     <asp:Label ID="lbl_username" runat="server" Text="管理"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="dc_admin/admin_login.aspx"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;
