--- a/index.master
+++ b/index.master
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="theme-color" content="#25b3eb">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/docs.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
@@ -34,7 +35,7 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a class="navbar-brand" href="./"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><%=dc_Settings.LoadValue("site_title")%></a>
+                        <a class="navbar-brand" href="./"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><%=dcSettings.LoadValue("site_title")%></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,7 +49,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" 
                                     role="button" aria-haspopup="true" aria-expanded="false"  style="padding: 9px;">
-                                    <asp:Image ID="img_headimg" runat="server" class="img-circle" style="border-radius: 50px !important;" height="32" width="32"/>
+                                    <asp:Image ID="img_headimg" runat="server" class="img-circle" style="border-radius: 50% !important;" height="32" width="32"/>
                                     <asp:Label ID="lbl_username" runat="server" Text="管理"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="dc_admin/admin_login.aspx"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;
@@ -69,7 +70,7 @@
                 </div>
             </nav>
             <!-- 页面内容容器 -->
-            <div class="container">
+            <div class="container" style="overflow-x: auto;">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
