--- a/css/dc_index.css
+++ b/css/dc_index.css
@@ -13,6 +13,14 @@
         text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
     }
 
+.card {
+    padding: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0px 0px 2px #b2b2b2;
+    border-radius: 5px;
+}
+
 .data_pager {
     display:inline-block;
 
@@ -40,4 +48,15 @@
 
 .main_article{
     font-size:20px;
+}
+
+.img-rounded  {
+    border: none !important;
+}
+
+.title_img {
+    background-image: url(../res/homepage_title_img.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
