--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -47,14 +47,15 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="article_addmod.aspx">写文章</a></li>
                                     <li><a href="article_list.aspx">文章管理</a></li>
-                                    <li><a href="article_tag_list.aspx">文章标签管理</a></li>
+                                    <li><a href="article_tag_list.aspx">标签管理</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">设置<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="admin_settings.aspx">全部设置</a></li>
-                                    <li><a href="debug.aspx">debug.aspx</a></li>
+                                    <li><a href="admin_users.aspx">用户管理</a></li>
+                                    <li><a href="debug.aspx">调试工具</a></li>
                                 </ul>
                             </li>
                             <!--
