--- a/dc_admin/admin.master
+++ b/dc_admin/admin.master
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="theme-color" content="#04519b">
+    <link rel="shortcut icon" href="../res/logo.png" />
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/docs.css" rel="stylesheet" />
     <link href="../css/animate.css" rel="stylesheet" />
@@ -40,17 +41,18 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="Default.aspx">控制中心</a></li>
+                            <li><a href="Default.aspx" class="">控制中心</a></li>
 
-                            <li class="dropdown">
+                            <li class="dropdown ">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">文章<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="article_addmod.aspx">写文章</a></li>
+                                    <li><a href="article_addmod.aspx">
+                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;写文章</a></li>
                                     <li><a href="article_list.aspx">文章管理</a></li>
                                     <li><a href="article_tag_list.aspx">标签管理</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown">
+                            <li class="dropdown ">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">设置<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="admin_settings.aspx">全部设置</a></li>
@@ -60,7 +62,7 @@
                             </li>
                             <!--
 
-                            <li class="dropdown">
+                            <li class="dropdown ">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理<span class="badge">1</span><span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">用户管理</a></li>
@@ -73,14 +75,15 @@
                         -->
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
+                            <li class="dropdown ">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                     aria-haspopup="true" aria-expanded="false" style="padding: 9px;">
-                                    <asp:Image ID="img_headimg" runat="server" class="img-circle" style="border-radius: 50% !important;" height="32" width="32"/>
+                                    <asp:Image ID="img_headimg" runat="server" class="img-circle" Style="border-radius: 50% !important;" Height="32" Width="32" />
                                     <asp:Label ID="lbl_username" runat="server" Text="USERNAME"></asp:Label>&nbsp;<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <asp:LinkButton ID="LinkButton1" runat="server" OnClick="btn_modifyAdminInfo_Click" CausesValidation="False">资料修改</asp:LinkButton></li>
+                                        <asp:LinkButton ID="LinkButton1" runat="server" OnClick="btn_modifyAdminInfo_Click" CausesValidation="False">
+                                            <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>&nbsp;个人资料</asp:LinkButton></li>
                                     <li>
                                         <asp:LinkButton ID="btn_logoff" runat="server" OnClick="btn_logoff_Click" CausesValidation="False">
                                             <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;注销</asp:LinkButton></li>
